<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/clear"
        android:layout_width="156dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/quaternary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/clear"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNumber" />

    <Button
        android:id="@+id/neg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/quaternary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/neg"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/clear"
        app:layout_constraintStart_toEndOf="@+id/clear" />

    <EditText
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="649dp"
        android:backgroundTint="@color/background"
        android:ems="10"
        android:focusable="false"
        android:focusedByDefault="false"
        android:fontFamily="sans-serif"
        android:gravity="right"
        android:inputType="number|numberDecimal"
        android:padding="10dp"
        android:textColor="@color/primary"
        android:textSize="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <EditText
        android:id="@+id/newNumber"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:focusable="false"
        android:focusedByDefault="false"
        android:fontFamily="sans-serif"
        android:gravity="right"
        android:inputType="number|numberDecimal"
        android:padding="10dp"
        android:textColor="@color/primary"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif"
        android:gravity="right"
        android:padding="10dp"
        android:textColor="@color/primary"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/newNumber"
        app:layout_constraintEnd_toStartOf="@+id/newNumber" />

    <Button
        android:id="@+id/five"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/five"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/four"
        app:layout_constraintStart_toEndOf="@+id/four" />

    <Button
        android:id="@+id/seven"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/seven"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <Button
        android:id="@+id/plus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/tertiary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/add"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/three" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/tertiary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/subtract"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/six"
        app:layout_constraintStart_toEndOf="@+id/six" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/tertiary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/multiply"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nine"
        app:layout_constraintStart_toEndOf="@+id/nine" />

    <Button
        android:id="@+id/divide"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/tertiary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/divide"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/neg"
        app:layout_constraintStart_toEndOf="@+id/neg" />

    <Button
        android:id="@+id/nine"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/nine"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/eight"
        app:layout_constraintStart_toEndOf="@+id/eight" />

    <Button
        android:id="@+id/three"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/three"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/two"
        app:layout_constraintStart_toEndOf="@+id/two" />

    <Button
        android:id="@+id/equals"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/tertiary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/enter"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/decimal"
        app:layout_constraintStart_toEndOf="@+id/decimal" />

    <Button
        android:id="@+id/decimal"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/decimal"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/zero"
        app:layout_constraintStart_toEndOf="@+id/zero" />

    <Button
        android:id="@+id/two"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/two"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/one"
        app:layout_constraintStart_toEndOf="@+id/one" />

    <Button
        android:id="@+id/eight"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/eight"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/seven"
        app:layout_constraintStart_toEndOf="@+id/seven" />

    <Button
        android:id="@+id/four"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/four"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/one"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/one"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/zero"
        android:layout_width="156dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/zero"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/six"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/six"
        android:textSize="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/five"
        app:layout_constraintStart_toEndOf="@+id/five" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintGuide_begin="205dp"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>